--- a/resources/translationstrings.ini
+++ b/resources/translationstrings.ini
@@ -51,3 +51,12 @@ Transform_Adult=Взросление!
 TimeLabel=Время:
 ScoreLabel=Счет:
 Transform_Stompy=Топтун!
+YouFeelBlessed=Вы чувствуете себя счастливыми!
+LuckyPenny=Счастливый Пенни
+LuckyPenny_Description=Повышает удачу
+Stat_Tears=слезы
+Stat_Range=дальность
+Stat_Speed=скорость
+Stat_Luck=удача
+Stat_ShotSpeed=скорость стрельбы
+Stat_HP=здоровье
